--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h3>Search by ISBN</h3>
     
             <div class="form-group">
-            <input type="number" id="ISBN" placeholder="ISBN Number">
+                <input type="text" id="title" placeholder="Title">
             </div>
     
             <button class="btn btn-primary search" type="button">Search</button>
